--- a/shopping-cart/style.css
+++ b/shopping-cart/style.css
@@ -1,76 +1,82 @@
 body {
-    padding: 50px 0;
+  padding: 50px 0;
 }
-
 #shop {
-    background-color: rgb(245, 245, 245);
+  background-color: #f5f5f5;
 }
-
 .item-image {
-    width: 120px;
+  width: 120px;
 }
-
 .item {
-    display: flex;
-    align-items: center;
-    margin: 100px 0;
-    padding: 25px;
-    background-color: white;
-    border-radius: 25px;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -moz-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin: 100px 0;
+  padding: 25px;
+  background-color: #fff;
+  -webkit-border-radius: 25px;
+  -moz-border-radius: 25px;
+  border-radius: 25px;
 }
-
+.buy,
+.checkout,
+.item {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+}
 .buy {
-    display: flex;
-    align-items: center;
-    margin-left: auto;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -moz-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin-left: auto;
 }
-
 .buy h4 {
-    margin: 0 25px;
+  margin: 0 25px;
 }
-
 h3 {
-    margin-left: 25px;
+  margin-left: 25px;
 }
-
 input {
-    width: 50px;
+  width: 50px;
 }
-
-#removePhone,
-#removeCase {
-    cursor: pointer;
+#checkout,
+#removeCase,
+#removePhone {
+  cursor: pointer;
 }
-
 .checkout {
-    display: flex;
-    justify-content: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -moz-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
-
 section {
-    padding: 25px;
+  padding: 25px;
 }
-
 #checkout {
-    text-align: center;
-    Color: white;
-    background-color: red;
-    padding: 10px 25px;
-    cursor: pointer;
+  text-align: center;
+  color: #fff;
+  background-color: red;
+  padding: 10px 25px;
 }
-
 #checkout:hover {
-    background-color: #dd0000;
+  background-color: #d00;
 }
-
 .button {
-    width: 30px;
-    height: 30px;
+  width: 30px;
+  height: 30px;
 }
-
 .counter {
-    height: 24px;
-    width: 50px;
-    text-align: center;
-    margin: 2.5px;
+  height: 24px;
+  width: 50px;
+  text-align: center;
+  margin: 2.5px;
 }
